fix the petName not showing when the details are too long

--- a/public/stylesheets/adoption.css
+++ b/public/stylesheets/adoption.css
@@ -313,7 +313,6 @@
 
 .details-wrap .img-wrap {
     height: 80vh;
-    
     flex: 1;
     width: 100%;
     display: flex;
@@ -341,6 +340,7 @@
 .details-wrap .info-wrap {
     flex: 2;
     height: 80vh;
+    padding-top: 20vh !important;
     /* height: fit-content; */
     margin-left: 2%;
     box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2);
